testdata/baselines/reference/submodule/compiler/pathMappingBasedModuleResolution_withExtension_failedLookup.errors.txt
/a.ts(1,21): error TS2307: Cannot find module 'foo' or its corresponding type declarations.
/tsconfig.json(3,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.
/tsconfig.json(5,21): error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?


==== /tsconfig.json (2 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
                "foo": ["foo/foo.ts"]
                        ~~~~~~~~~~~~
!!! error TS5090: Non-relative paths are not allowed. Did you forget a leading './'?
            }
        }
    }
    
==== /a.ts (1 errors) ====
    import { foo } from "foo";
                        ~~~~~
!!! error TS2307: Cannot find module 'foo' or its corresponding type declarations.
    